# FasterLivePortrait

./: pyproject.toml
src/fasterliveportrait/interface/: download_models.py  pipeline.py  run.py
src/fasterliveportrait/models/: landmark_model.py
src/fasterliveportrait/models/XPose/models/UniPose/: fuse_modules.py  swin_transformer.py
src/fasterliveportrait/models/XPose/models/UniPose/ops/modules/: ms_deform_attn.py  ms_deform_attn_key_aware.py
src/fasterliveportrait/pipelines/: faster_live_portrait_pipeline.py  gradio_live_portrait_pipeline.py
src/fasterliveportrait/utils/: animal_landmark_runner.py
