[project]
name = "fasterliveportrait"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "colorama>=0.4.6",
    "ffmpeg-python>=0.2.0",
    "gradio<=5.23.0",
    "huggingface-hub>=0.26.1",
    "insightface>=0.7.3",
    "kokoro>=0.9.4",
    "mediapipe>=0.10.32",
    "munch>=4.0.0",
    "omegaconf>=2.3.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.13.0.90",
    "phonemizer>=3.3.0",
    "pycuda>=2026.1",
    "scikit-image>=0.24.0",
    "soundfile>=0.13.1",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchgeometry>=0.1.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
